--- a/budget.html
+++ b/budget.html
@@ -1,25 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aplicación presupuesto</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+  <body onload="runApp()">
     <div class="cabecero">
-        <div class="presupuesto">
-            <div class="presupuesto_titulo">
-                Presupuesto disponible
+      <div class="presupuesto">
+        <div class="presupuesto_titulo">Presupuesto disponible</div>
+        <div class="presupuesto_valor" id="budget">+ 2,000</div>
+        <div class="presupuesto_ingreso limpiarEstilos">
+          <div class="presupuesto_ingreso--texto">Ingresos</div>
+          <div class="derecha">
+            <div class="presupuesto_ingreso--valor" id="totalRevenue">
+              + 4,000
             </div>
+            <div class="presupuesto_ingreso--porcentaje">&nbsp;</div>
+          </div>
         </div>
-
+        <div class="presupuesto_egreso limpiarEstilos">
+          <div class="presupuesto_egreso--texto">Egresos</div>
+          <div class="derecha">
+            <div class="presupuesto_egreso--valor" id="totalExpense">
+              + 4,000
+            </div>
+            <div class="presupuesto_egreso--porcentaje" id="percentageExpenses">
+              45%
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    
-    <script src="js/Dato.js"></script>
-    <script src="js/Ingreso.js"></script>
-    <script src="js/Egreso.js"></script>
+
+    <div class="contenedor limpiarEstilos">
+      <div class="ingreso">
+        <h2 class="ingreso_titulo">Ingresos</h2>
+        <div id="lista-ingresos">
+          <div class="elemento limpiarEstilos">
+            <div class="elemento_descripcion">Salario</div>
+            <div class="derecha limpiarEstilos">
+              <div class="elemento_valor">+ 2,200.00</div>
+              <div class="elemento_eliminar">
+                <button class="elemento_eliminar--btn">
+                  <ion-icon name="close-circle-outline"></ion-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="egreso">
+        <h2 class="egreso_titulo">Egresos</h2>
+        <div id="lista-egresos">
+          <div class="elemento limpiarEstilos">
+            <div class="elemento_descripcion">Renta </div>
+            <div class="derecha limpiarEstilos">
+              <div class="elemento_valor">- 2,200.00</div>
+              <div class="elemento_porcentaje">21%</div>
+              <div class="elemento_eliminar">
+                <button class="elemento_eliminar--btn">
+                  <ion-icon name="close-circle-outline"></ion-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="js/Data.js"></script>
+    <script src="js/Expenses.js"></script>
+    <script src="js/Revenue.js"></script>
     <script src="js/app.js"></script>
-</body>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </body>
 </html>
