--- a/budget.html
+++ b/budget.html
@@ -35,39 +35,30 @@
       </div>
     </div>
 
+    <form id="forma" onsubmit="return false">
+        <div class="agregar">
+            <div class="agregar_contenedor">
+                <select class= "agregar_tipo" id="tipo">
+                    <option value="+">+</option>
+                    <option value="-">-</option>
+                </select>
+                <input type="text" class="agregar_descripcion" placeholder="Agregar descripción" id="descripcion"/>
+                <input type="number" class="agregar_valor" id="valor" placeholder="valor" step="any"/>
+                <button class="agregar_btn" onclick="agregarDato()">
+                    <ion-icon name="checkmark-circle-outline"></ion-icon>
+                </button>
+            </div>
+        </div>
+    </form>
+
     <div class="contenedor limpiarEstilos">
       <div class="ingreso">
         <h2 class="ingreso_titulo">Ingresos</h2>
-        <div id="lista-ingresos">
-          <div class="elemento limpiarEstilos">
-            <div class="elemento_descripcion">Salario</div>
-            <div class="derecha limpiarEstilos">
-              <div class="elemento_valor">+ 2,200.00</div>
-              <div class="elemento_eliminar">
-                <button class="elemento_eliminar--btn">
-                  <ion-icon name="close-circle-outline"></ion-icon>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="lista-ingresos"></div>
       </div>
       <div class="egreso">
         <h2 class="egreso_titulo">Egresos</h2>
-        <div id="lista-egresos">
-          <div class="elemento limpiarEstilos">
-            <div class="elemento_descripcion">Renta </div>
-            <div class="derecha limpiarEstilos">
-              <div class="elemento_valor">- 2,200.00</div>
-              <div class="elemento_porcentaje">21%</div>
-              <div class="elemento_eliminar">
-                <button class="elemento_eliminar--btn">
-                  <ion-icon name="close-circle-outline"></ion-icon>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="lista-egresos"></div>
       </div>
     </div>
 
